@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-        <herd>xemacs</herd>
-        <maintainer>
-                <email>xemacs@gentoo.org</email>
-                <description>Primary Maintainer</description>
-        </maintainer>
-        <longdescription></longdescription>
+  <herd>xemacs</herd>
 </pkgmetadata>
