@@ -1,6 +1,9 @@
 # ChangeLog for app-xemacs/skk
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/skk/ChangeLog,v 1.9 2007/06/03 19:51:49 graaff Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/skk/ChangeLog,v 1.10 2008/03/19 20:01:39 graaff Exp $
+
+  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
+  A herd should not be listed as maintainer
 
   03 Jun 2007; Hans de Graaff <graaff@gentoo.org> skk-1.23.ebuild:
   Stable on amd64, ppc, ppc64, sparc, x86 as per #175560
